# candlekos

./: # Tensor Operations and CUDA Features Us  .gitattributes  .gitignore  .gitmodules  .trufflehogignore  0Acopilot-convers.md  CONTRIBUTING.md  Cargo.toml  FEATURE_TESTING.md  FFT_IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  MODELS_RUST_COMPARISON.md  README.md  README_additions.md  TODO_DONE_LIST.md  find_candle_notebooks.rs  upate-upgrade-shell-command.desktop
.cache/clangd/index/: BaseTypes.h.76C944F3F2F18624.idx  CodeGen.cpp.A2C673AF124C6585.idx  Common.h.81EBE6BB9737F670.idx  Constant.cpp.4D410FEB4247D9F2.idx  ConstantUnion.h.5FCDBF958B824E4B.idx  DirStackFileIncluder.h.A67E90D9D06FC729.idx  GLSL.ext.AMD.h.745461143CCD961E.idx  GLSL.ext.ARM.h.0E619EB0E558CC84.idx  GLSL.ext.EXT.h.A50A436BB68132EA.idx  GLSL.ext.KHR.h.517364C0864CA5A0.idx  GLSL.ext.NV.h.B84C3FCEC649F339.idx  GLSL.std.450.h.C2070158D113DF64.idx  GlslangToSpv.cpp.A2FF659C03EF0773.idx  GlslangToSpv.h.F9F008402F088D1E.idx  InReadableOrder.cpp.4F314FEB0927E565.idx  InfoSink.cpp.970617B05BC099D5.idx  InfoSink.h.50ECF6E767B6BEC7.idx  Initialize.cpp.F9E5D4FCE0F1A420.idx  (+192 more)
.cargo/: config.toml
.github/: PR_BODY_draft.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  feature_request.md
.github/workflows/: ci.yml  nightly-powerset.yml  trufflehog.yml
0aEXPLORATION/: Cargo.toml  FEATURES.md  NOTEBOOK_TEMPLATE.md  README.md  code_overview.rs  compound_data_examples.rs  egui_scan_demo.rs  gpu_direct_display.rs  gpu_fft2_dual_pane.rs  gpu_stream_display.rs  gpu_tensor_feedback.rs  realtime_demo.sh  realtime_yolo.rs  tensor_feedback_simple.rs  tensor_feedback_viz.rs  test_5d_tensors.rs  test_custom_types.rs  test_higher_dims.rs  video_processor.rs
0aEXPLORATION/NOT/: fft_overview.rs
0aEXPLORATION/candle_notebooks/: Cargo.toml  candle_test.ipynb  consolidated_helpers_egui.ipynb  consolidated_helpers_egui.ipynb.bak  egui_window_demo.ipynb  executed_consolidated_helpers_egui.ipynb  helpers_demo.ipynb  simple_tensors.ipynb  temp_run_cells.ipynb  tensor_art_gallery.ipynb  tensor_math_fill.ipynb
0aEXPLORATION/candle_notebooks/src/: egui_window.rs  expr.rs  helper.rs  lib.rs
0aEXPLORATION/candle_tensor_augment/: Cargo.toml  README.md
0aEXPLORATION/candle_tensor_augment/src/: lib.rs
0aEXPLORATION/candle_tensor_programs/: Cargo.toml  README.md
0aEXPLORATION/candle_tensor_programs/src/: lib.rs  lisp.rs  tests.rs
0aEXPLORATION/candle_tensor_programs/tests/: lisp_eval.rs
0aEXPLORATION/demos/: fft_basic_demo.ipynb  fft_basic_demo.rs.ipynb  scan_operations_demo.ipynb  scan_operations_demo.rs.ipynb
0aEXPLORATION/notebooks/: Cargo.toml  candle-eguiplot-notebook.rs.ipynb  candlework.rs.ipynb  image_processing.rs.ipynb
0aEXPLORATION/notebooks/eguiplot/: Cargo.toml
0aEXPLORATION/notebooks/eguiplot/src/: lib.rs
0aEXPLORATION/notebooks/src/: lib.rs
0aEXPLORATION/research/notebooks/candle_notebooks/: Cargo.toml  README.md  candle_test.ipynb  consolidated_helpers_egui.ipynb  egui_window_demo.ipynb  executed_consolidated_helpers_egui.ipynb  helpers_demo.ipynb  simple_tensors.ipynb  temp_run_cells.ipynb  tensor_art_gallery.ipynb  tensor_math_fill.ipynb
0aEXPLORATION/research/notebooks/candle_notebooks/src/: egui_window.rs  expr.rs  helper.rs  lib.rs
0aEXPLORATION/src/: feature_guards.rs  lib.rs  proc_fields.rs
candle-book/src/: README.md
candle-core/: Cargo.toml  build.rs
candle-core/.cargo/: config.toml
candle-core/benches/: bench_main.rs
candle-core/benches/benchmarks/: affine.rs  conv_transpose2d.rs  copy.rs  fft.rs  fft_large.rs  fft_ratio.rs  matmul.rs  mod.rs  qmatmul.rs  random.rs  reduce.rs  unary.rs  where_cond.rs
candle-core/src/: accelerate.rs  backprop.rs  conv.rs  custom_op.rs  device.rs  display.rs  error.rs  lib.rs  mkl.rs  pickle.rs  safetensors.rs  sort.rs  tensor.rs  tensor_cat.rs  utils.rs
candle-core/src/cpu/: avx.rs  kernels.rs  mod.rs
candle-core/src/cpu_backend/: cpu_fft.rs  mod.rs
candle-core/src/cuda_backend/: cuda_fft.rs  device.rs  error.rs  mod.rs
candle-core/src/cuda_backend/cuda_fft/: impls.rs  vkfft.rs  vkfft_wrapper.c
candle-core/src/metal_backend/: device.rs  mod.rs
candle-core/src/quantized/: avx.rs  cuda.rs  ggml_file.rs  gguf_file.rs  k_quants.rs  metal.rs  neon.rs  simd128.rs  utils.rs
candle-core/tests/: conv_tests.rs  cpu_scan_investigation.rs  custom_op_tests.rs  fft_feature_check.rs  fft_normalization_tests.rs  fft_test_utils.rs  fft_tests.rs  gpu_dft_gemm.rs  gpu_fft_smoke.rs  gpu_fft_smoke_complex.rs  gpu_fft_vkfft_c2c.rs  gpu_fft_vkfft_c2r.rs  gpu_fft_vkfft_r2c.rs  gpu_fft_vkfft_smoke.rs  grad_tests.rs  layout_tests.rs  matmul_tests.rs  pool_tests.rs  quantized_tests.rs  scan_tests.rs  tensor_tests.rs
candle-datasets/src/: hub.rs
candle-examples/: Cargo.toml
candle-examples/examples/: fft_demo.rs  scan.rs
candle-examples/src/: audio.rs
candle-kernels/: build.rs
candle-kernels/src/: fft.cu  lib.rs  ptx.rs  scan.cu  scan.rs
candle-nn/examples/: basic_optimizer.rs  cpu_benchmarks.rs
candle-nn/src/: activation.rs  batch_norm.rs  conv.rs  encoding.rs  layer_norm.rs  lib.rs  ops.rs  rotary_emb.rs  var_builder.rs
candle-nn/tests/: batch_norm.rs  layer_norm.rs  ops.rs  optim.rs  rnn.rs
candle-pyo3/: Cargo.toml
candle-pyo3/src/: lib.rs
candle-transformers/tests/: nms_tests.rs
candle-wasm-examples/bert/: Cargo.toml
candle-wasm-examples/blip/: Cargo.toml
candle-wasm-examples/llama2-c/: Cargo.toml
candle-wasm-examples/moondream/: Cargo.toml
candle-wasm-examples/phi/: Cargo.toml  index.html
candle-wasm-examples/segment-anything/: Cargo.toml
candle-wasm-examples/t5/: Cargo.toml
candle-wasm-examples/whisper/: Cargo.toml
candle-wasm-examples/yolo/: Cargo.toml
candle-wasm-tests/: Cargo.toml
candle-wasm-tests/tests/: quantized_tests.rs
docs/: EXPLORATION_FEATURE_TESTING.md  EXPLORATION_OVERVIEW.md
src/: main.rs
tensor-tools/src/: main.rs
xtask/: Cargo.toml  README.md
xtask/scripts/: annotate_notebook_cells.py
xtask/src/: main.rs  notebook_test.rs
xtask/tests/: run_file_basic.rs
(+257 files in other folders)
