[package]
name = "candle-exploration"
version = "0.1.0"
edition = "2021"
default-run = "tensor_feedback_viz"

[dependencies]
candle-core = { path = "../candle-core" }
candle-nn = { path = "../candle-nn" }
candle-transformers = { path = "../candle-transformers" }
fastrand = "2.0"
imageproc = "0.25"
minifb = "0.27"
font8x8 = "0.3"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
egui = { version = "0.27", default-features = true }
eframe = { version = "0.32", default-features = true }
meval = { version = "0.2", optional = true }

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
cudnn = ["candle-core/cudnn", "candle-nn/cudnn", "candle-transformers/cudnn"]
fft = ["candle-core/fft"]
viz-debug = [] # enables additional debug logging paths in tensor_feedback_viz
expr-fields = ["dep:meval"]

[[bin]]
name = "code_overview"
path = "src/bin/code_overview.rs"

[[bin]]
name = "test_higher_dims"
path = "src/bin/test_higher_dims.rs"

[[bin]]
name = "test_custom_types"
path = "src/bin/test_custom_types.rs"

[[bin]]
name = "compound_data_examples"
path = "src/bin/compound_data_examples.rs"

[[bin]]
name = "tensor_feedback_viz"
path = "src/bin/tensor_feedback_viz.rs"
required-features = ["cuda"]

[[bin]]
name = "tensor_feedback_simple"
path = "src/bin/tensor_feedback_simple.rs"
required-features = ["cuda"]

[[bin]]
name = "gpu_tensor_feedback"
path = "src/bin/gpu_tensor_feedback.rs"
required-features = ["cuda"]

[[bin]]
name = "gpu_stream_display"
path = "src/bin/gpu_stream_display.rs"
required-features = ["cuda"]


[[bin]]
name = "fft_overview"
path = "NOT/fft_overview.rs"
required-features = ["fft"]

[[bin]]
name = "gpu_fft2_dual_pane"
path = "src/bin/gpu_fft2_dual_pane.rs"
required-features = ["cuda", "fft"]

[[bin]]
name = "egui_scan_demo"
path = "src/bin/egui_scan_demo.rs"

[[bin]]
name = "test_5d_tensors"
path = "src/bin/test_5d_tensors.rs"
