[package]
name = "candle-core"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
accelerate-src = { workspace = true, optional = true }
byteorder = { workspace = true }
candle-kernels = { workspace = true, optional = true }
candle-metal-kernels = { workspace = true, optional = true }
metal = { workspace = true, optional = true }
cudarc = { workspace = true, optional = true }
gemm = { workspace = true }
half = { workspace = true }
float8 = { workspace = true }
intel-mkl-src = { workspace = true, optional = true }
libc = { workspace = true, optional = true }
memmap2 = { workspace = true }
num-traits = { workspace = true }
num_cpus = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rayon = { workspace = true }
rustfft = { version = "6.0", optional = true }
safetensors = { workspace = true }
realfft = { version = "3.3", optional = true }
thiserror = { workspace = true }
ug-cuda = { workspace = true, optional = true }
ug-metal = { workspace = true, optional = true }
yoke = { workspace = true }
zip = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ug = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
criterion = { workspace = true }

[build-dependencies]
cc = "1.0"

[features]
default = []
cuda = ["cudarc", "dep:candle-kernels", "dep:ug-cuda", "float8/cuda"]
cudnn = ["cuda", "cudarc/cudnn"]
mkl = ["dep:libc", "dep:intel-mkl-src"]
accelerate = ["dep:libc", "dep:accelerate-src"]
metal = ["dep:metal", "dep:candle-metal-kernels", "dep:ug-metal"]
fft = ["dep:rustfft", "dep:realfft"]
## Gate the experimental CUDA FFT implementation (uses cuFFT via cudarc APIs that may not be available in all versions).
## This is OFF by default; enable explicitly with `--features cuda-fft` when your toolchain supports it.
## Umbrella GPU FFT feature (keeps the existing name as alias for compatibility)
cuda-fft = ["gpu-fft"]
## Unified GPU FFT switch; enables FFT provider plumbing on CUDA backends
gpu-fft = []
## Optional provider using VkFFT (portable across CUDA/HIP/Vulkan/OpenCL/Metal).
## Implementation to be wired through an external crate in a follow-up.
gpu-fft-vkfft = ["gpu-fft"]

# Enable actual VkFFT FFI wiring (off by default to avoid system deps).
# When enabled, we'll compile a small C wrapper against the vendored VkFFT.
gpu-fft-vkfft-ffi = ["gpu-fft-vkfft"]

# Enable lightweight debug logging for FFT development (no-op unless explicitly enabled).
fft-debug = []

[[bench]]
name = "bench_main"
harness = false

[[example]]
name = "metal_basics"
required-features = ["metal"]

[[example]]
name = "cuda_basics"
required-features = ["cuda"]
