[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
camino = "1"

[dependencies.cargo_metadata]
version = "0.18"
features = ["builder"]

[[bin]]
name = "xtask"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
