[package]
name = "candle-notebook"
version = "0.1.0"
edition = "2021"

[features]
default = []
# Forward common optional features to underlying crates.
cuda = ["candle-core/cuda", "candle-nn/cuda"]
fft = ["candle-core/fft"]

[dependencies]
candle-core = { path = "../../candle-core", default-features = false }
candle-nn = { path = "../../candle-nn", default-features = false }
anyhow = "1"
thiserror = "2"
image = { version = "0.24" }
base64 = "0.21"

